Fix The tooltip on create a free account is hidden under the main window. #1020

--- a/AzureFunctions.AngularClient/src/app/main/main.component.scss
+++ b/AzureFunctions.AngularClient/src/app/main/main.component.scss
@@ -1,17 +1,16 @@
 @import '../../sass/main';
-
-#dashboard-blank{
+#dashboard-blank {
     background-color: $body-bg-color;
 }
 
-#content{
+#content {
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: $body-bg-color;
     padding-left: $sidenav-width;
-
-    #dashboard{
-        height:100%;
+    z-index: -1;
+    #dashboard {
+        height: 100%;
     }
 }
